--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,7 +5,6 @@
     min-height: 72px;
 
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
   }
@@ -13,6 +12,7 @@
 
 .header__logo {
   margin-top: 4px;
+  margin-right: 15px;
 
   transition: opacity $trans-default;
 
@@ -34,11 +34,16 @@
   padding: 0;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .header__navitem {
   &:not(:last-child) {
     margin-right: 32px;
+
+    @include vp-1023 {
+      margin-right: 22px;
+    }
   }
 }
 
