--- a/source/sass/blocks/page-nav.scss
+++ b/source/sass/blocks/page-nav.scss
@@ -15,6 +15,11 @@
     letter-spacing: -0.5px;
     color: $color-default-black-87;
   }
+
+  @include vp-1023 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 .page-nav__back {
