--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -4,13 +4,13 @@
   margin: 0 auto;
   padding: 0 112px;
 
-  // @include vp-1439 {
-  //   padding: 0 32px;
-  // }
+  @include vp-1439 {
+    padding: 0 32px;
+  }
 
-  // @include vp-1023 {
-  //   padding: 0 24px;
-  // }
+  @include vp-1023 {
+    padding: 0 24px;
+  }
 
   @include vp-767 {
     padding: 0 20px;
